# War-Card-Game

./: SmalltalkWarFIN.txt
war/lib/: War.ex  war_test.exs
war/test/: war_test.exs
war_hs/: CHANGELOG.md  war.cabal
war_hs/app/: Main.hs
war_hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
war_hs/dist-newstyle/packagedb/ghc-9.2.5/: package.cache  war-0.1.0.0-inplace-war-lib.conf
war_hs/lib/: War.hs
war_hs/tests/: WarTest.hs
